--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,7 @@
   --fw-medium: 500;
   --fw-semi-bold: 600;
   --fw-bold: 700;
+  --fw-black: 900;
 }
 
 ////////////////
@@ -82,7 +83,7 @@ html {
   padding-inline: 1.25rem;
 }
 
-@media (min-width: 35em) {
+@media (min-width: 40em) {
   .wrapper {
     padding-inline: 4rem;
   }
@@ -92,7 +93,7 @@ html {
   display: inline-block;
   position: relative;
   cursor: pointer;
-  padding: 0.75em 3.5em 0.75em 1.75em;
+  padding: 0.75em 1.75em;
 
   background: var(--bg, #fff);
   color: var(--clr, #000);
@@ -100,23 +101,15 @@ html {
   line-height: 1;
 
   &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-
+    content: var(--arrow, url(../icons/arrow-black.svg));
     display: inline-block;
-    background: var(--arrow, url(../icons/arrow-black.svg));
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: contain;
-    padding: 0.5em;
+
     margin-left: 1em;
     transition: transform 250ms ease-out;
   }
 
   &:is(:hover, :focus)::after {
-    transform: translate(0.5em, -50%);
+    transform: translate(0.5em);
   }
 }
 
@@ -125,11 +118,12 @@ html {
     font-size: 1.25rem;
 
     &::after {
-      transform: translateY(calc(-50% + 0.125rem));
+      transform: translate(0, -0.125rem) scale(1.5);
+      line-height: 0;
     }
 
     &:is(:hover, :focus)::after {
-      transform: translate(0.5em, calc(-50% + 0.125rem));
+      transform: translate(0.5em, -0.125rem) scale(1.5);
     }
   }
 }
@@ -161,7 +155,7 @@ header {
 }
 
 .nav-scrolled {
-  background: var(--clr-accent-300);
+  background: var(--clr-accent-100);
 }
 
 .logo {
@@ -218,7 +212,7 @@ header {
   }
 }
 
-@media (max-width: 35em) {
+@media (max-width: 40em) {
   .primary-navigation {
     --gap: 0;
 
@@ -289,65 +283,61 @@ section {
 
 /* Hero Section */
 
-.hero {
-  .hero__image {
-    display: block;
-    width: 100%;
-    height: calc(100vh - 10.5rem);
+.hero__image {
+  display: block;
+  width: 100%;
+  height: calc(100vh - 10.5rem);
 
-    object-fit: cover;
-    object-position: right 0px;
+  object-fit: cover;
+  object-position: right 0px;
+}
+
+.hero__container {
+  .text-content {
+    background: var(--clr-accent-500);
+    padding-block: 2rem;
+
+    .heading {
+      font-size: 5rem;
+      line-height: 0.9;
+      color: var(--clr-accent-900);
+      font-weight: var(--fw-bold);
+  
+      width: min-content;
+      margin-top: -4.5rem;
+    }
+  
+    .subheading {
+      font-size: 1.25rem;
+      font-weight: var(--fw-semi-bold);
+    }
+  
+    p {
+      margin-top: 2rem;
+      max-width: 45ch;
+
+      font-size: 0.875rem;
+      font-weight: var(--fw-regular);
+    }
+  }
+
+  .btn-content {
+    justify-content: start;
+    background: var(--clr-accent-300);
+    padding-block: 1rem;
+  }
+}
+
+@media (min-width: 40em) {
+  .hero__image {
+    height: calc(100vh - 18rem);
   }
 
   .hero__container {
     .text-content {
-      background: var(--clr-accent-500);
-      padding-block: 2rem;
-
       .heading {
-        font-size: 5rem;
-        line-height: 0.9;
-        color: var(--clr-accent-900);
-        font-weight: var(--fw-bold);
-    
-        width: min-content;
-        margin-top: -4.5rem;
-      }
-    
-      .subheading {
-        font-size: 1.25rem;
-        font-weight: var(--fw-semi-bold);
-      }
-    
-      p {
-        margin-top: 2rem;
-        max-width: 45ch;
-
-        font-size: 0.875rem;
-        font-weight: var(--fw-regular);
-      }
-    }
-
-    .btn-content {
-      justify-content: start;
-      background: var(--clr-accent-300);
-      padding-block: 1rem;
-    }
-  }
-}
-
-@media (min-width: 35em) {
-  .hero {
-    .hero__image {
-      height: calc(100vh - 18rem);
-    }
-
-    .hero__container {
-      .text-content {
-        .heading {
-          font-size: 10.625rem;
-          margin-top: -8rem;
-        }
+        font-size: 10.625rem;
+        margin-top: -8rem;
       }
     }
   }
@@ -356,40 +346,174 @@ section {
 @media (min-width: 60em) {
   .hero {
     position: relative;
+  }
 
-    .hero__image {
-      height: 100vh;
+  .hero__image {
+    height: 100vh;
+  }
+
+  .hero__container {
+    --flow: 1rem;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+
+    height: min-content;
+    width: min-content;
+
+    .text-content {
+      .heading {
+        margin-top: 0;
+        margin-right: -10rem;
+      }
+
+      .subheading {
+        font-size: 2rem;
+      }
+
+      p {
+        margin-top: var(--flow);
+        font-size: 1.125rem;
+      }
     }
 
-    .hero__container {
-      --flow: 1rem;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      margin: auto 0;
+    .btn-content {
+      background: transparent;
+    }
+  }
+}
 
-      height: min-content;
-      width: min-content;
+/* About Section */
+.about {
+  background: var(--clr-accent-100);
+  justify-content: center;
+  align-items: center;
+  padding-block: 4rem;
 
-      .text-content {
-        .heading {
-          margin-top: 0;
-          margin-right: -10rem;
-        }
+  position: relative;
+  overflow: hidden;
 
-        .subheading {
-          font-size: 2rem;
-        }
+  &::before,
+  &::after {
+    content: 'about about about about about about about about about about about about about about about about about about about about about about';
+    position: absolute;
+    top: 2rem;
+    left: 0;
+    z-index: 0;
+    width: 200vw;
 
-        p {
-          margin-top: var(--flow);
-          font-size: 1.125rem;
-        }
+    color: var(--clr-accent-300);
+    font-size: 5rem;
+    font-weight: var(--fw-black);
+    line-height: 2;
+  }
+
+  &::before {
+    transform: translate(-4rem,-5rem);
+  }
+}
+
+.about__container {
+  max-width: 40em;
+  z-index: 1;
+  
+  color: var(--clr-accent-900);
+  background: var(--clr-accent-100);
+}
+
+.about__image {
+  width: 100%;
+}
+
+.about__content {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: min-content min-content auto;
+  gap: 1.5rem;
+  padding: 1.5em;
+
+  h1 {
+    font-size: clamp(2rem, 3.5vw + 0.5rem, 3rem);
+    line-height: 1;
+  }
+
+  div > p {
+    --flow: 0.5rem;
+    font-size: clamp(0.875rem, 1vw + 0.5rem, 1rem);
+  }
+
+  .contact {
+    --gap: 1rem;
+    flex-wrap: wrap;
+
+    [data-contact] {
+      display: flex;
+
+      font-size: clamp(0.8rem, 1vw + 0.25rem, 0.875rem);
+      color: var(--clr-accent-900);
+
+      &::before {
+        margin-right: 0.25rem;
       }
+    }
 
-      .btn-content {
-        background: transparent;
-      }
+    [data-contact="linkedin"]::before {
+      content: url(../icons/linkedin.svg);
+    }
+
+    [data-contact="resume"]::before {
+      content: url(../icons/resume.svg);
+    }
+
+    [data-contact="email"]::before {
+      content: url(../icons/email.svg);
+      margin-top: 0.05rem;
+    }
+  }
+}
+
+@media (min-width: 40em) {
+  .about {
+    &::before,
+    &::after {
+      font-size: 11.25rem;
+      line-height: 2;
+    }
+
+    &::before {
+      transform: translate(-4rem, -11.25rem);
+    }
+  }
+}
+
+@media (min-width: 60em) {
+  .about {
+    justify-content: start;
+  }
+
+  .about__container {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+
+    max-width: 95%;
+    min-width: 56em;
+    margin-left: -4rem;
+  }
+
+  .about__image {
+    height: 100%;
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: right center;
+  }
+
+  .about__content {
+    padding: 2em;
+
+    .contact {
+      align-self: end;
     }
   }
 }
