--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ html {
     transform: translate(0.5em, -0.125rem) scale(1.5);
   }
 }
-.btn--darkgreen {
+.btn--green {
   --bg: var(--clr-accent-500);
   --clr: var(--clr-light-100);
   --arrow: url(../icons/arrow-white.svg);
@@ -119,6 +119,12 @@ html {
 .btn--lightgreen {
   --bg: var(--clr-accent-100);
   --clr: var(--clr-accent-900);
+}
+
+.btn--darkgreen {
+  --bg: var(--clr-accent-900);
+  --clr: var(--clr-light-100);
+  --arrow: url(../icons/arrow-white.svg);
 }
 
 /* Header */
@@ -426,4 +432,170 @@ section {
   .about__content .contact {
     align-self: end;
   }
+}
+/* Portfolio */
+.portfolio {
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-rows: -webkit-min-content;
+  grid-auto-rows: min-content;
+  gap: 1rem;
+  padding-bottom: 2rem;
+  background: var(--clr-accent-300);
+}
+
+.portfolio__header {
+  display: grid;
+  align-items: center;
+  background: var(--clr-accent-900);
+  margin-left: -1.25rem;
+  width: calc(100% + 2.5rem);
+  padding-block: 1em;
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.card {
+  --gap: 0;
+  flex-direction: column;
+  color: var(--clr-light-100);
+}
+
+.card__image {
+  display: block;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+  aspect-ratio: 9/5;
+}
+
+.card__content {
+  background: var(--clr-accent-500);
+  padding: 1rem;
+}
+.card__content div {
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.card__content .publication {
+  font-weight: var(--fw-medium);
+}
+.card__content .date {
+  font-size: 0.75rem;
+}
+.card__content .title {
+  font-weight: var(--fw-bold);
+  font-size: 1.125rem;
+}
+.card__content .description {
+  font-size: 0.875rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+@media (min-width: 40em) {
+  .portfolio {
+    grid-template-columns: 1fr 1fr;
+  }
+  .portfolio__header {
+    grid-column-start: span 2;
+    width: calc(100% + 8rem);
+    margin-left: -4rem;
+    font-size: 4rem;
+  }
+  .card .card__content {
+    padding: 1.75em;
+  }
+  .card .card__content .publication {
+    font-size: 1.125rem;
+  }
+  .card .card__content .date {
+    font-size: 0.875rem;
+  }
+  .card .card__content .title {
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 60em) {
+  .portfolio {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    padding-block: 4rem;
+  }
+  .portfolio .btn {
+    margin-top: 1.5rem;
+    font-size: 1rem;
+  }
+  .portfolio .btn::after {
+    transform: translate(0);
+  }
+  .portfolio .btn:is(:hover, :focus)::after {
+    transform: translateX(0.5em);
+  }
+  .portfolio__header {
+    width: calc(100% + 4rem);
+    margin-left: -4rem;
+    font-size: 4rem;
+  }
+  .card {
+    --flow: 0.5rem;
+  }
+  .card.right, .card.left {
+    --flow: 1.5rem;
+    grid-column-start: span 2;
+    width: calc(100% + 4em);
+  }
+  .card.right .card__image, .card.left .card__image {
+    width: clamp(14em, 25vw, 25.5em);
+  }
+  .card.right .card__content, .card.left .card__content {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content 1fr;
+    grid-template-rows: min-content min-content min-content 1fr;
+  }
+  .card.right .card__content div, .card.left .card__content div {
+    flex-direction: column;
+  }
+  .card.right .card__content .description, .card.left .card__content .description {
+    -webkit-line-clamp: 8;
+  }
+  .card.right .card__content .btn, .card.left .card__content .btn {
+    align-self: end;
+  }
+  .card.right {
+    flex-direction: row;
+    margin-right: -4em;
+  }
+  .card.right .card__content {
+    padding-right: 4em;
+  }
+  .card.right .card__content div {
+    align-items: flex-start;
+  }
+  .card.right .card__content .btn {
+    justify-self: left;
+  }
+  .card.left {
+    margin-left: -4em;
+    flex-direction: row-reverse;
+    text-align: right;
+  }
+  .card.left .card__content {
+    padding-left: 4em;
+  }
+  .card.left .card__content .btn {
+    justify-self: right;
+  }
+}
+/* Footer */
+footer {
+  background: var(--clr-accent-500);
+  padding-block: 1rem;
+  text-align: center;
+  font-size: 0.875rem;
 }/*# sourceMappingURL=style.css.map */
