--- a/css/style.scss
+++ b/css/style.scss
@@ -128,7 +128,7 @@ html {
   }
 }
 
-.btn--darkgreen {
+.btn--green {
   --bg: var(--clr-accent-500);
   --clr: var(--clr-light-100);
   --arrow: url(../icons/arrow-white.svg);
@@ -137,6 +137,12 @@ html {
 .btn--lightgreen {
   --bg: var(--clr-accent-100);
   --clr: var(--clr-accent-900);
+}
+
+.btn--darkgreen {
+  --bg: var(--clr-accent-900);
+  --clr: var(--clr-light-100);
+  --arrow: url(../icons/arrow-white.svg);
 }
 
 ////////////////
@@ -205,7 +211,7 @@ header {
 
         &::before {
           opacity: 1;
-      transform: translateX(0);
+          transform: translateX(0);
         }
       }
     }
@@ -516,4 +522,210 @@ section {
       align-self: end;
     }
   }
+}
+
+/* Portfolio */
+.portfolio {
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-rows: min-content;
+  gap: 1rem;
+  padding-bottom: 2rem;
+
+  background: var(--clr-accent-300);
+}
+
+.portfolio__header {
+  display: grid;
+  align-items: center;
+  background: var(--clr-accent-900);
+  margin-left: -1.25rem;
+  width: calc(100% + 2.5rem);
+  padding-block: 1em;
+
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.card {
+  --gap: 0;
+  flex-direction: column;
+  color: var(--clr-light-100);
+}
+
+.card__image {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  object-position: center center;
+  aspect-ratio: 9 / 5;
+}
+
+.card__content {
+  background: var(--clr-accent-500);
+  padding: 1rem;
+
+  div {
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .publication {
+    font-weight: var(--fw-medium);
+  }
+
+  .date {
+    font-size: 0.75rem;
+  }
+
+  .title {
+    font-weight: var(--fw-bold);
+    font-size: 1.125rem;
+  }
+
+  .description {
+    font-size: 0.875rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 40em) {
+  .portfolio {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .portfolio__header {
+    grid-column-start: span 2;
+    width: calc(100% + 8rem);
+    margin-left: -4rem;
+
+    font-size: 4rem;
+  }
+
+  .card {
+
+    .card__content {
+      padding: 1.75em;
+
+      .publication {
+        font-size: 1.125rem;
+      }
+
+      .date {
+        font-size: .875rem;
+      }
+
+      .title {
+        font-size: 1.25rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 60em) {
+  .portfolio {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+
+    padding-block: 4rem;
+
+    .btn {
+      margin-top: 1.5rem;
+
+      font-size: 1rem;
+  
+      &::after {
+        transform: translate(0);
+      }
+  
+      &:is(:hover, :focus)::after {
+        transform: translateX(0.5em);
+      }
+    }
+  }
+
+  .portfolio__header {
+    width: calc(100% + 4rem);
+    margin-left: -4rem;
+
+    font-size: 4rem;
+  }
+
+  .card {
+    --flow: 0.5rem;
+  }
+
+  .card {
+    &.right,
+    &.left {
+      --flow: 1.5rem;
+      grid-column-start: span 2;
+      width: calc(100% + 4em);
+
+      .card__image {
+        width: clamp(14em, 25vw, 25.5em);
+      }
+
+      .card__content {
+        display: grid;
+        grid-auto-flow: row;
+        grid-template-rows: min-content min-content min-content 1fr;
+
+        div {
+          flex-direction: column;
+        }
+
+        .description {
+          -webkit-line-clamp: 8;
+        }
+
+        .btn {
+          align-self: end;
+        }
+      }
+    }
+
+    &.right {
+      flex-direction: row;
+      margin-right: -4em;
+
+      .card__content {
+        padding-right: 4em;
+
+        div {
+          align-items: flex-start;
+        }
+
+        .btn {
+          justify-self: left;
+        }
+      }
+    }
+
+    &.left {
+      margin-left: -4em;
+      flex-direction: row-reverse;
+      text-align: right;
+
+      .card__content {
+        padding-left: 4em;
+
+        .btn {
+          justify-self: right;
+        }
+      }
+    }
+  }
+}
+
+/* Footer */
+footer {
+  background: var(--clr-accent-500);
+  padding-block: 1rem;
+
+  text-align: center;
+  font-size: 0.875rem;
 }
