--- a/css/style.scss
+++ b/css/style.scss
@@ -402,7 +402,7 @@ section {
 
   &::before,
   &::after {
-    content: 'about about about about about about about about about about about about about about about about about about about about about about';
+    content: 'about about about about about about about about about about about about about about about about about about about about about about about about about about about about about';
     position: absolute;
     top: 2rem;
     left: 0;
