--- a/css/style.scss
+++ b/css/style.scss
@@ -9,8 +9,8 @@
   --clr-accent-100: #F1FEE8;
   --clr-accent-300: #D5EAC8;
   --clr-accent-400: #779265;
-  --clr-accent-500: #617752;
-  --clr-accent-900: #2B3127;
+  --clr-accent-500: hsl(96, 18%, 39%);
+  --clr-accent-900: hsl(96, 11%, 17%);
 
   /* Font Weight */
   --fw-regular: 400;
@@ -49,6 +49,10 @@ body {
   color: var(--clr-light-100);
   font-family: 'Playfair Display', serif;
   line-height: 1.6;
+}
+
+img {
+  background-color: var(--clr-accent-900);
 }
 
 /////////////////////////
@@ -548,47 +552,96 @@ section {
 }
 
 .card {
-  --gap: 0;
-  flex-direction: column;
+  position: relative;
+  height: 30em;
+  
   color: var(--clr-light-100);
+  overflow: hidden;
 }
 
 .card__image {
   display: block;
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center center;
-  aspect-ratio: 9 / 5;
+
+  transition: all 300ms ease;
 }
 
 .card__content {
-  background: var(--clr-accent-500);
+  position: absolute;
+  inset: 0;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   padding: 1rem;
+  background: hsl(96, 18%, 39%, 0.85);
 
+  transition: all 300ms ease;
+}
+
+.card__text {
   div {
     justify-content: space-between;
     align-items: flex-end;
+    line-height: 1;
   }
-
+  
   .publication {
     font-weight: var(--fw-medium);
   }
-
+  
   .date {
     font-size: 0.75rem;
   }
-
+  
   .title {
     font-weight: var(--fw-bold);
     font-size: 1.125rem;
   }
-
+  
   .description {
     font-size: 0.875rem;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 12;
     -webkit-box-orient: vertical;
     overflow: hidden;
+  }
+}
+
+@media (hover) {
+  
+  .card__image {
+    height: 55%;
+  }
+
+  .card__content {
+    transform: translateY(55%);
+    background: var(--clr-accent-500);
+  }
+
+  .card__text {
+    .description {
+      -webkit-line-clamp: 4;
+    }
+  }
+
+  .card:is(:focus, :hover) {
+    .card__image {
+      height: 100%;
+    }
+  
+    .card__content {
+      transform: translateY(0);
+      background: hsl(96, 18%, 39%, 0.9);
+    }
+  
+    .card__text {
+      .description {
+        -webkit-line-clamp: 12;
+      }
+    }
   }
 }
 
@@ -606,22 +659,37 @@ section {
   }
 
   .card {
+    grid-column-start: span 2;
+  }
 
+  .card__content {
+    padding: 1.75rem;
+
+    .publication {
+      font-size: 1.125rem;
+    }
+
+    .date {
+      font-size: .875rem;
+    }
+
+    .title {
+      font-size: 1.25rem;
+    }
+  }
+
+  @media (hover) {
     .card__content {
-      padding: 1.75em;
-
-      .publication {
-        font-size: 1.125rem;
-      }
-
-      .date {
-        font-size: .875rem;
-      }
-
-      .title {
-        font-size: 1.25rem;
+      .description {
+        -webkit-line-clamp: 3;
       }
     }
+  }
+}
+
+@media (min-width: 50em) {
+  .card {
+    grid-column-start: auto;
   }
 }
 
@@ -633,8 +701,6 @@ section {
     padding-block: 4rem;
 
     .btn {
-      margin-top: 1.5rem;
-
       font-size: 1rem;
   
       &::after {
@@ -664,26 +730,26 @@ section {
       --flow: 1.5rem;
       grid-column-start: span 2;
       width: calc(100% + 4em);
+      display: flex;
 
       .card__image {
         width: clamp(14em, 25vw, 25.5em);
+        height: 100%;
       }
 
       .card__content {
-        display: grid;
-        grid-auto-flow: row;
-        grid-template-rows: min-content min-content min-content 1fr;
+        position: relative;
+        transform: translateY(0);
+      }
 
+      .card__text {
         div {
+          --gap: 0.5rem;
           flex-direction: column;
         }
 
         .description {
           -webkit-line-clamp: 8;
-        }
-
-        .btn {
-          align-self: end;
         }
       }
     }
@@ -698,10 +764,6 @@ section {
         div {
           align-items: flex-start;
         }
-
-        .btn {
-          justify-self: left;
-        }
       }
     }
 
@@ -714,7 +776,7 @@ section {
         padding-left: 4em;
 
         .btn {
-          justify-self: right;
+          align-self: flex-end;
         }
       }
     }
