--- a/css/style.scss
+++ b/css/style.scss
@@ -9,8 +9,8 @@
   --clr-accent-100: #F1FEE8;
   --clr-accent-300: #D5EAC8;
   --clr-accent-400: #779265;
-  --clr-accent-500: hsl(96, 18%, 39%);
-  --clr-accent-900: hsl(96, 11%, 17%);
+  --clr-accent-500: #607552;
+  --clr-accent-900: #2a3027;
 
   /* Font Weight */
   --fw-regular: 400;
