--- a/css/style.scss
+++ b/css/style.scss
@@ -299,7 +299,7 @@ section {
   height: calc(100vh - 10.5rem);
 
   object-fit: cover;
-  object-position: right 0px;
+  object-position: right center;
 }
 
 .hero__container {
