--- a/css/style.scss
+++ b/css/style.scss
@@ -623,7 +623,8 @@ section {
 
   .card__text {
     .description {
-      -webkit-line-clamp: 4;
+      opacity: 0;
+      -webkit-line-clamp: 5;
     }
   }
 
@@ -639,7 +640,7 @@ section {
   
     .card__text {
       .description {
-        -webkit-line-clamp: 12;
+        opacity: 1;
       }
     }
   }
@@ -675,14 +676,6 @@ section {
 
     .title {
       font-size: 1.25rem;
-    }
-  }
-
-  @media (hover) {
-    .card__content {
-      .description {
-        -webkit-line-clamp: 3;
-      }
     }
   }
 }
@@ -749,7 +742,7 @@ section {
         }
 
         .description {
-          -webkit-line-clamp: 8;
+          opacity: 1;
         }
       }
     }
